fix: update footer link hover color for improved visibility and add responsive positioning for fixed header

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -129,6 +129,47 @@ H1, H2, H6 {
   ::-webkit-scrollbar {
     display: none; /* Chrome, Safari, Opera */
   }
+
+  #fixedHeader {
+    right: 0px;
+  }
+}
+
+@media (min-width: 1280px) {
+  #fixedHeader {
+    right: 50px;
+  }
+}
+
+@media (min-width: 1360px) {
+  #fixedHeader {
+    right: 100px;
+  }
+}
+@media (min-width: 1436px) {
+  #fixedHeader {
+    right: 150px;
+  }
+}
+@media (min-width: 1536px) {
+  #fixedHeader {
+    right: 200px;
+  }
+}
+@media (min-width: 1650px) {
+  #fixedHeader {
+    right: 250px;
+  }
+}
+@media (min-width: 1750px) {
+  #fixedHeader {
+    right: 300px;
+  }
+}
+@media (min-width: 1850px) {
+  #fixedHeader {
+    right: 350px;
+  }
 }
 
 .header-blur-gradient {
